<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".CrimeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imCrimePhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:scaleType="centerInside" />

            <ImageButton
                android:id="@+id/ibtnCrimeCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@android:drawable/ic_menu_camera" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/MediumTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_crime_title" />

            <EditText
                android:id="@+id/edtCrimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_crime_title"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/MediumTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_crime_details" />

    <Button
        android:id="@+id/btnCrimeDate"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Wed Nov 14 11:56 EST 2018" />

    <CheckBox
        android:id="@+id/chkCrimeSolve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_crime_solved" />

    <Button
        android:id="@+id/btnCrimeSuspect"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_crime_suspect" />

    <Button
        android:id="@+id/btnCallSuspect"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_call_suspect"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCrimeReport"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_crime_report" />
</LinearLayout>